[workspace]
members = ["const_env", "const_env_impl", "const_env_tests"]
resolver = "3"

[workspace.package]
version = "0.1.4"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2024"
readme = "README.md"
homepage = "https://github.com/EkardNT/const_env"
repository = "https://github.com/EkardNT/const_env"
keywords = ["env", "envvar", "environment", "variable"]
categories = ["development-tools::build-utils", "config"]
license = "CC0-1.0"