[package]
name = "const_env"
version = "0.1.4"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2021"
description = "Configure const and static items by environment variables."
homepage = "https://github.com/EkardNT/const_env"
repository = "https://github.com/EkardNT/const_env"
readme = "README.md"
keywords = ["env", "envvar", "environment", "variable"]
categories = ["development-tools::build-utils", "config"]
license = "CC0-1.0"

[lib]
proc_macro = true

[features]
tracked = []

[dependencies.const_env_impl]
version = "=0.1.4"
path = "../const_env_impl"

[dev-dependencies]
compiletest_rs = { version = "*", features = ["stable"] }
