[package]
name = "const_env"
version = "0.1.4"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2024"
description = "Configure const and static items by environment variables."
homepage = "https://github.com/EkardNT/const_env"
repository = "https://github.com/EkardNT/const_env"
readme = "README.md"
keywords = ["env", "envvar", "environment", "variable"]
categories = ["development-tools::build-utils", "config"]
license = "CC0-1.0"

[lib]
proc-macro = true

[features]
tracked = []

[dependencies.const_env_impl]
path = "../const_env_impl"