[package]
name = "const_env"
description = "Configure const and static items by environment variables."
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
tracked = []

[dependencies.const_env_impl]
path = "../const_env_impl"
version = "0.1.4"