[package]
name = "const_env_impl"
version = "0.1.2"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2018"
description = "Configure const and static items by environment variables."
homepage = "https://github.com/EkardNT/const_env"
repository = "https://github.com/EkardNT/const_env"
readme = "README.md"
keywords = ["env", "envvar", "environment", "variable"]
categories = ["development-tools::build-utils", "config"]
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"