[package]
name = "const_env_tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
tracked = ["const_env/tracked"]

[dependencies]
const_env = { path = "../const_env", version = "0.1.4" }